@@ -18,6 +18,14 @@ MComix 1.00
     - MComix now starts in RTL mode when a RTL language has been manually
       selected in the preference dialog.
 
+    - Added an option to run arbitrary external commands on the currently
+      opened file or archive. Commands can be edited from the "Edit->Open with"
+      menu entry. The first item in this list can be accessed with the F8 key.
+
+      The first argument to each command must be the absolute path to an
+      executable, or an executable found in PATH. The 'Save' button is disabled
+      until each command is at least syntactically valid.
+
     - Added an option to automatically rotate images if their height exceeds
       their width (or width exceeds height), located in the menu bar under
       Tools -> Transform image -> Auto-rotate image.
